hydroflow/tests/compile-fail/surface_group_by_generics_bad.stderr
warning: unused import: `hydroflow::hydroflow_syntax`
 --> tests/compile-fail/surface_group_by_generics_bad.rs:1:5
  |
1 | use hydroflow::hydroflow_syntax;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0271]: expected `IntoIter<&str>` to be an iterator that yields `(_, _)`, but it yields `&str`
 --> tests/compile-fail/surface_group_by_generics_bad.rs:5:9
  |
5 |           source_iter(["hello", "world"])
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(_, _)`, found `&str`
6 |               -> group_by::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________-
7 | |                 *old += val;
8 | |             })
  | |______________- required by a bound introduced by this call
  |
  = note:  expected tuple `(_, _)`
          found reference `&str`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_group_by_generics_bad.rs:6:16
  |
6 |               -> group_by::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |  ________________^
7 | |                 *old += val;
8 | |             })
  | |______________^ required by this bound in `check_input`

error[E0271]: expected `new` to be a fn item that returns `usize`, but it returns `String`
 --> tests/compile-fail/surface_group_by_generics_bad.rs:6:47
  |
6 |               -> group_by::<'tick, &str, usize>(String::new, |old: &mut _, val| {
  |                  -                              ^^^^^^^^^^^ expected `usize`, found `String`
  |  ________________|
  | |
7 | |                 *old += val;
8 | |             })
  | |______________- required by a bound introduced by this call
  |
note: required by a bound in `std::collections::hash_map::Entry::<'a, K, V>::or_insert_with`
 --> $RUST/std/src/collections/hash/map.rs
  |
  |     pub fn or_insert_with<F: FnOnce() -> V>(self, default: F) -> &'a mut V {
  |                                          ^ required by this bound in `Entry::<'a, K, V>::or_insert_with`
